<resources>
    <!-- Main activity strings-->
    <string name="app_name">StayActive</string>
    <string name="button_user">Käyttäjäprofiili</string>
    <string name="button_trainings_list">Liikuntapäiväkirja</string>
    <string name="button_add_training">+</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string-array name="training_types_array">
        <item>Juoksu</item>
        <item>Kuntosali</item>
        <item>Kävely</item>
        <item>Pyöräily</item>
    </string-array>
=======

=======
  
>>>>>>> 79148a41489d84e7567c04455efb6e238e7bc0cf
    <!-- User profile strings-->
    <string name="tv_user_greeting">Hei!</string>
    <string name="tv_user_name">Nimimerkki:</string>
    <string name="edit_text_user_name_value">Syötä nimimerkki</string>
    <string name="tv_weight">Paino:</string>
    <string name="edit_text_weight_value">Syötä painosi</string>
    <string name="tv_height">Pituus:</string>
    <string name="edit_text_height_value">Syötä pituutesi</string>
    <string name="tv_BMI">Painoindeksi</string>
    <string name="tv_BMI_result">Tässä näkyy painoindeksisi</string>
    <string name="tv_exercise_goal">Liikuntatavoite</string>
    <string name="edit_text_exercise_goal">Minuuttia/päivä</string>
    <string name="image_button_save"></string>
<<<<<<< HEAD


>>>>>>> f3da4587b6a37fefe7c98c387c97ff09a0faa12c
=======
  
    <!-- Spinner training types array strings-->
      <string-array name="training_types_array">
        <item>Juoksu</item>
        <item>Kuntosali</item>
        <item>Kävely</item>
        <item>Pyöräily</item>
    </string-array>
>>>>>>> 79148a41489d84e7567c04455efb6e238e7bc0cf
</resources>