<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_silhouette_front2"
    tools:context=".UserProfileActivity">

    <!--Here is text view for greeting -->
    <TextView
        android:id="@+id/tvUserGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="184dp"
        android:text="@string/tv_user_greeting"
        style="@style/FontSizeUniform"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserNameValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalTop" />
    <!--Here are all text views related to user info -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_user_name"
        style="@style/FontSizeUniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextUserNameValue"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_weight"
        style="@style/FontSizeUniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextWeightValue"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_height"
        style="@style/FontSizeUniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextHeightValue"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_BMI"
        style="@style/FontSizeUniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBMIvalue"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />

    <!--Here are all edit texts to take user input-->
    <!--Autofillhints https://developer.android.com/guide/topics/text/autofill-optimize-->
    <EditText
        android:id="@+id/editTextUserNameValue"
        android:layout_width="200sp"
        android:layout_height="45sp"
        android:layout_marginBottom="24dp"
        android:hint="@string/edit_text_user_name_value"
        android:inputType="textPersonName"
        style="@style/FontSizeUniform"
        app:layout_constraintBottom_toTopOf="@+id/editTextWeightValue"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        android:autofillHints="newUsername" />

    <EditText
        android:id="@+id/editTextWeightValue"
        android:layout_width="200sp"
        android:layout_height="45sp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/edit_text_weight_value"
        android:inputType="number"
        style="@style/FontSizeUniform"
        app:layout_constraintBottom_toTopOf="@+id/editTextHeightValue"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextHeightValue"
        android:layout_width="200sp"
        android:layout_height="45sp"
        android:layout_marginBottom="15dp"
        android:hint="@string/edit_text_height_value"
        android:inputType="number"
        style="@style/FontSizeUniform"
        app:layout_constraintBottom_toTopOf="@+id/tvBMIvalue"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextExerciseGoalValue"
        android:layout_width="200sp"
        android:layout_height="45sp"
        android:layout_marginTop="15sp"
        android:hint="@string/edit_text_exercise_goal"
        android:inputType="number"
        style="@style/FontSizeUniform"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintVertical_bias="0.012"
        android:importantForAutofill="no" />
    <!--Here are text views to show BMI-->
    <TextView
        android:id="@+id/tvBMIvalue"
        android:layout_width="200sp"
        android:layout_height="45sp"
        android:text="@string/tv_BMI_result"
        style="@style/FontSizeUniform"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight" />

    <TextView
        android:id="@+id/tvExerciseGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_exercise_goal"
        style="@style/FontSizeUniform"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextExerciseGoalValue"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft" />
    <!--This is image button for saving user input info-->
    <ImageButton
        android:id="@+id/imageButtonSave"
        android:text="@string/image_button_save"
        android:onClick="saveUserProfile"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalBottom"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:background="@drawable/rounded_corner"
        android:contentDescription="Save"/>

    <!--Here are constraints that are used in all pages-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>